--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "name": "js_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest",
-    "testWatch": "jest --watchAll"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^8.2.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.12",
-    "uuid": "^8.1.0"
-  },
-  "devDependencies": {
-    "axios": "^0.19.2",
-    "jest": "^26.1.0",
-    "nodemon": "^2.0.4"
-  }
+	"name": "js_api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js",
+		"test": "jest",
+		"testWatch": "jest --watchAll"
+	},
+	"keywords": [],
+	"author": "Classy Bear",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"eslint-plugin-jest": "^24.1.0",
+		"express": "^4.17.1",
+		"jest": "^26.6.1",
+		"pg": "^8.2.1",
+		"pg-hstore": "^2.3.3",
+		"sequelize": "^5.21.12",
+		"uuid": "^8.1.0"
+	},
+	"devDependencies": {
+		"axios": "^0.19.2",
+		"eslint": "^7.11.0",
+		"eslint-config-airbnb-base": "^14.2.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^6.14.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"nodemon": "^2.0.4",
+		"prettier": "^2.1.2"
+	}
 }
