--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
 	"name": "js_api",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "src/index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
+		"start": "node src/index.js",
+		"dev": "nodemon src/index.js",
 		"test": "jest",
-		"testWatch": "jest --watchAll"
+		"testWatch": "jest --watchAll",
+		"doc": "jsdoc -c jsdoc.json"
 	},
 	"keywords": [],
 	"author": "Classy Bear",
@@ -23,14 +24,15 @@
 	"devDependencies": {
 		"axios": "^0.19.2",
 		"eslint": "^7.11.0",
-		"jest": "^26.6.1",
 		"eslint-config-airbnb-base": "^14.2.0",
 		"eslint-config-node": "^4.1.0",
-		"eslint-plugin-jest": "^24.1.0",
 		"eslint-config-prettier": "^6.14.0",
 		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.1.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^3.1.4",
+		"jest": "^26.6.1",
+		"jsdoc": "^3.6.6",
 		"nodemon": "^2.0.4",
 		"prettier": "^2.1.2"
 	}
