--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "js_api",
 	"version": "1.0.0",
 	"description": "",
-	"main": "src/index.js",
+	"main": "./src/index.js",
 	"scripts": {
-		"start": "node src/index.js",
-		"dev": "nodemon src/index.js",
+		"start": "node ./src/index.js",
+		"dev": "nodemon ./src/index.js",
 		"test": "jest",
 		"testWatch": "jest --watchAll",
 		"doc": "jsdoc -c jsdoc.json"
