--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "js_api",
+	"name": "chat_app_rest_api",
 	"version": "1.0.0",
 	"description": "",
 	"main": "./src/index.js",
@@ -11,15 +11,14 @@
 		"doc": "jsdoc -c jsdoc.json"
 	},
 	"keywords": [],
-	"author": "Classy Bear",
+	"author": "Classy-Bear",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"pg": "^8.2.1",
 		"pg-hstore": "^2.3.3",
-		"sequelize": "^5.21.12",
-		"uuid": "^8.1.0"
+		"sequelize": "^5.21.12"
 	},
 	"devDependencies": {
 		"axios": "^0.19.2",
