--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "Classy-Bear",
 	"license": "ISC",
 	"dependencies": {
+		"chalk": "^4.1.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"pg": "^8.2.1",
